Finally UI changes

--- a/modules/core/src/com/ragenotes/blacklist/app.properties
+++ b/modules/core/src/com/ragenotes/blacklist/app.properties
@@ -22,9 +22,9 @@ cuba.anonymousSessionId = 8bb2f3bb-7b18-4adc-9b71-da6b46ba0296
 #                                  Other                                      #
 ###############################################################################
 
-cuba.webContextName = rnbl-core
-cuba.availableLocales = Russian|ru;English|en
+cuba.webContextName = bl-core
+cuba.availableLocales = English|en;Russian|ru
 cuba.localeSelectVisible = false
-cuba.restApiUrl=http://localhost:8080/rnbl-portal/api
-cuba.webAppUrl=http://localhost:8080/rnbl
+cuba.restApiUrl=http://localhost:8080/bl-portal/api
+cuba.webAppUrl=http://localhost:8080/bl
 cuba.ftsConfig=+com/ragenotes/blacklist/fts.xml
