--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 
 buildscript {
-    ext.cubaVersion = '7.1.0.BETA3'
+    ext.cubaVersion = '7.1.3'
     repositories {
         maven {
             url 'https://dl.bintray.com/cuba-platform/main'
@@ -15,7 +15,7 @@ buildscript {
     }
 }
 
-def modulePrefix = 'rnbl'
+def modulePrefix = 'bl'
 
 def globalModule = project(":${modulePrefix}-global")
 def coreModule = project(":${modulePrefix}-core")
@@ -39,6 +39,7 @@ cuba {
 dependencies {
     appComponent("com.haulmont.cuba:cuba-global:$cubaVersion")
     appComponent("com.haulmont.fts:fts-global:$cubaVersion")
+    appComponent('com.haulmont.addon.restapi:restapi-global:7.1.1')
 }
 
 def hsql = 'org.hsqldb:hsqldb:2.4.1'
@@ -110,7 +111,7 @@ configure(coreModule) {
     task createDb(dependsOn: assembleDbScripts, description: 'Creates local database', type: CubaDbCreation) {
         dbms = 'hsql'
         host = 'localhost:9010'
-        dbName = 'blacklist'
+        dbName = 'bl'
         dbUser = 'sa'
         dbPassword = ''
     }
@@ -118,7 +119,7 @@ configure(coreModule) {
     task updateDb(dependsOn: assembleDbScripts, description: 'Updates local database', type: CubaDbUpdate) {
         dbms = 'hsql'
         host = 'localhost:9010'
-        dbName = 'blacklist'
+        dbName = 'bl'
         dbUser = 'sa'
         dbPassword = ''
     }
