--- a/modules/web/src/com/ragenotes/blacklist/web-app.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web-app.properties
@@ -29,14 +29,17 @@ cuba.creditsConfig = +
 ###############################################################################
 
 # Middleware connection
-cuba.connectionUrlList = http://localhost:8080/rnbl-core
+cuba.connectionUrlList = http://localhost:8080/bl-core
 
 # Set to false if the middleware works on different JVM
 cuba.useLocalServiceInvocation = true
 
-cuba.webContextName = rnbl
-cuba.availableLocales = Russian|ru;English|en
-cuba.localeSelectVisible = false
+cuba.webContextName = bl
+cuba.availableLocales = English|en;Russian|ru
+cuba.localeSelectVisible = true
 cuba.web.theme = hover
-cuba.webAppUrl = http://localhost:8080/rnbl
-cuba.restApiUrl=http://localhost:8080/rnbl-portal/api
+cuba.webAppUrl = http://localhost:8080/bl
+cuba.restApiUrl=http://localhost:8080/bl-portal/api
+cuba.rest.servicesConfig=+com/ragenotes/blacklist/rest-services.xml
+
+cuba.web.mainScreenId = mainWindow
