--- a/modules/core/src/com/ragenotes/blacklist/app.properties
+++ b/modules/core/src/com/ragenotes/blacklist/app.properties
@@ -2,7 +2,7 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.dbmsType = hsql
+cuba.dbmsType = postgres
 
 cuba.springContextConfig = +com/ragenotes/blacklist/spring.xml
 
@@ -28,3 +28,8 @@ cuba.localeSelectVisible = false
 cuba.restApiUrl=http://localhost:8080/bl-portal/api
 cuba.webAppUrl=http://localhost:8080/bl
 cuba.ftsConfig=+com/ragenotes/blacklist/fts.xml
+
+cuba.bruteForceProtection.enabled = true
+cuba.bruteForceProtection.maxLoginAttemptsNumber = 7
+
+cuba.maxUploadSizeMb = 1
