--- a/modules/web/src/com/ragenotes/blacklist/web-app.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web-app.properties
@@ -43,3 +43,9 @@ cuba.restApiUrl=http://localhost:8080/bl-portal/api
 cuba.rest.servicesConfig=+com/ragenotes/blacklist/rest-services.xml
 
 cuba.web.mainScreenId = mainWindow
+cuba.gui.useSaveConfirmation = true
+
+cuba.gui.systemInfoScriptsEnabled = false
+cuba.web.productionMode = true
+
+cuba.web.closeIdleHttpSessions = true
