Available to add screens was added

--- a/modules/core/src/com/ragenotes/blacklist/app.properties
+++ b/modules/core/src/com/ragenotes/blacklist/app.properties
@@ -33,3 +33,4 @@ cuba.bruteForceProtection.enabled = true
 cuba.bruteForceProtection.maxLoginAttemptsNumber = 7
 
 cuba.maxUploadSizeMb = 1
+cuba.automaticDatabaseUpdate = true
