--- a/modules/web/src/com/ragenotes/blacklist/web-app.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web-app.properties
@@ -36,7 +36,6 @@ cuba.useLocalServiceInvocation = true
 
 cuba.webContextName = bl
 cuba.availableLocales = English|en;Russian|ru
-cuba.localeSelectVisible = true
 cuba.web.theme = hover
 cuba.webAppUrl = http://localhost:8080/bl
 cuba.restApiUrl=http://localhost:8080/bl-portal/api
@@ -49,3 +48,10 @@ cuba.gui.systemInfoScriptsEnabled = false
 cuba.web.productionMode = true
 
 cuba.web.closeIdleHttpSessions = true
+
+cuba.localeSelectVisible = true
+
+cuba.web.loginDialogDefaultPassword=
+cuba.web.loginDialogDefaultUser=
+
+cuba.web.useDeviceWidthForViewport = true
