Last updates : nginx was configured

--- a/modules/core/src/com/ragenotes/blacklist/app.properties
+++ b/modules/core/src/com/ragenotes/blacklist/app.properties
@@ -26,7 +26,7 @@ cuba.webContextName = bl-core
 cuba.availableLocales = English|en;Russian|ru
 cuba.localeSelectVisible = false
 cuba.restApiUrl=http://localhost:8080/bl-portal/api
-cuba.webAppUrl=http://localhost:8080/bl
+cuba.webAppUrl=https://blacklist-gta.ru/admin/
 cuba.ftsConfig=+com/ragenotes/blacklist/fts.xml
 
 cuba.bruteForceProtection.enabled = true
