--- a/modules/portal/src/com/ragenotes/blacklist/portal-app.properties
+++ b/modules/portal/src/com/ragenotes/blacklist/portal-app.properties
@@ -33,5 +33,5 @@ cuba.useLocalServiceInvocation = true
 # URL
 cuba.webContextName = bl-portal
 
-cuba.availableLocales = English|en
+cuba.availableLocales = English|en;Russian|ru
 cuba.localeSelectVisible = false
