--- a/modules/web/src/com/ragenotes/blacklist/web-app.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web-app.properties
@@ -37,7 +37,7 @@ cuba.useLocalServiceInvocation = true
 cuba.webContextName = bl
 cuba.availableLocales = English|en;Russian|ru
 cuba.web.theme = hover
-cuba.webAppUrl = http://localhost:8080/bl
+cuba.webAppUrl = https://blacklist-gta.ru/admin/
 cuba.restApiUrl=http://localhost:8080/bl-portal/api
 cuba.rest.servicesConfig=+com/ragenotes/blacklist/rest-services.xml
 
@@ -55,3 +55,5 @@ cuba.web.loginDialogDefaultPassword=
 cuba.web.loginDialogDefaultUser=
 
 cuba.web.useDeviceWidthForViewport = true
+
+cuba.web.pushLongPollingSuspendTimeoutMs = 1600000
