Last hot update

--- a/modules/web/src/com/ragenotes/blacklist/web-app.properties
+++ b/modules/web/src/com/ragenotes/blacklist/web-app.properties
@@ -54,6 +54,10 @@ cuba.localeSelectVisible = true
 cuba.web.loginDialogDefaultPassword=
 cuba.web.loginDialogDefaultUser=
 
+cuba.web.loginDialogPoweredByLinkVisible = false
 cuba.web.useDeviceWidthForViewport = true
+
+cuba.web.foldersPaneEnabled=true
+cuba.gui.genericFilterApplyImmediately = false
 
 cuba.web.pushLongPollingSuspendTimeoutMs = 1600000
