--- a/modules/core/src/com/ragenotes/blacklist/app.properties
+++ b/modules/core/src/com/ragenotes/blacklist/app.properties
@@ -33,4 +33,5 @@ cuba.bruteForceProtection.enabled = true
 cuba.bruteForceProtection.maxLoginAttemptsNumber = 7
 
 cuba.maxUploadSizeMb = 1
+cuba.schedulingActive = true
 cuba.automaticDatabaseUpdate = true
